<?xml version="1.0"?>
<package format="2">
  <name>proximity_sensors</name>
  <version>0.0.0</version>
  <description>Proximity sensor pipeline for Piper arm</description>
  <maintainer email="ewan0308@todo.todo">ewan0308</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
</package>
```

Also delete the `resource/` folder and `setup.cfg` — those are ament artifacts that serve no purpose in ROS1.

After that your package structure should look like:
```
proximity_sensors/
├── CMakeLists.txt
├── package.xml
└── proximity_sensors/
    ├── __init__.py
    ├── sensor_node.py
    ├── filter_node.py
    ├── watchdog_node.py
    └── velocity_controller.py